BACK/ms-clientes/chart-clientes/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: !! include "clientes.fullname" . ??
  labels:
    !!- include "clientes.labels" . | nindent 4 ??
spec:
  !!- if not .Values.autoscaling.enabled ??
  replicas: !! .Values.replicaCount ??
  !!- end ??
  selector:
    matchLabels:
      !!- include "clientes.selectorLabels" . | nindent 6 ??
  template:
    metadata:
      !!- with .Values.podAnnotations ??
      annotations:
        !!- toYaml . | nindent 8 ??
      !!- end ??
      labels:
        !!- include "clientes.selectorLabels" . | nindent 8 ??
    spec:
      !!- with .Values.imagePullSecrets ??
      imagePullSecrets:
        !!- toYaml . | nindent 8 ??
      !!- end ??
      serviceAccountName: !! include "clientes.serviceAccountName" . ??
      !!- if .Values.podSecurityContext ??
      securityContext:
        !!- toYaml .Values.podSecurityContext | nindent 8 ??
      !!- end ??
      containers:
        - name: !! .Chart.Name ??
          !!- if .Values.securityContext ??
          securityContext: !!- toYaml .Values.securityContext | nindent 12 ??
          !!- end ??
          image: "!! .Values.image.repository ??:!! .Values.image.tag | default .Chart.AppVersion ??"
          imagePullPolicy: !! .Values.image.pullPolicy ??
          ports:
            - name: http
              containerPort: 8080
          !!- with .Values.env ??
          !!- end ??
          resources:
            !!- toYaml .Values.resources | nindent 12 ??
      !!- with .Values.nodeSelector ??
      nodeSelector:
        !!- toYaml . | nindent 8 ??
      !!- end ??
      !!- with .Values.affinity ??
      affinity:
        !!- toYaml . | nindent 8 ??
      !!- end ??
      !!- with .Values.tolerations ??
      tolerations:
        !!- toYaml . | nindent 8 ??
      !!- end ??
