BACK/ms-clientes/chart-clientes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: !! include "clientes.fullname" . ??
  labels:
    !!- include "clientes.labels" . | nindent 4 ??
spec:
  type: !! .Values.service.type ??
  ports:
    - port: !! .Values.service.port ??
      targetPort: http
      protocol: TCP
      name: http
  selector:
    !!- include "clientes.selectorLabels" . | nindent 4 ??
